// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler > . 1`] = `
[
  "@layer utilities {
  /* caslon-utilities: global:container */
  :global(.global\\:container) {
    width: 100%;
    @media (width >= 40rem) {
      max-width: 40rem;
    }
    @media (width >= 48rem) {
      max-width: 48rem;
    }
    @media (width >= 64rem) {
      max-width: 64rem;
    }
    @media (width >= 80rem) {
      max-width: 80rem;
    }
    @media (width >= 96rem) {
      max-width: 96rem;
    }
  }
}
",
]
`;

exports[`compiler > . 2`] = `
[
  "@layer utilities {
  /* caslon-utilities: slotted:container */
  :slotted(.slotted\\:container) {
    width: 100%;
    @media (width >= 40rem) {
      max-width: 40rem;
    }
    @media (width >= 48rem) {
      max-width: 48rem;
    }
    @media (width >= 64rem) {
      max-width: 64rem;
    }
    @media (width >= 80rem) {
      max-width: 80rem;
    }
    @media (width >= 96rem) {
      max-width: 96rem;
    }
  }
}
",
]
`;

exports[`compiler > . 3`] = `
[
  "@layer utilities {
  /* caslon-utilities: deep:container */
  :deep(.deep\\:container) {
    width: 100%;
    @media (width >= 40rem) {
      max-width: 40rem;
    }
    @media (width >= 48rem) {
      max-width: 48rem;
    }
    @media (width >= 64rem) {
      max-width: 64rem;
    }
    @media (width >= 80rem) {
      max-width: 80rem;
    }
    @media (width >= 96rem) {
      max-width: 96rem;
    }
  }
}
",
]
`;
